--- a/report.Rmd
+++ b/report.Rmd
@@ -7,12 +7,22 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
 ```
 
-```{r}
-readfile <- read.csv("Fish Fraud Data CSV.csv")
+```{r - Cleaning up the Raw Data}
+FishFraud <- read.csv("Fish Fraud Data CSV.csv")
 
-readfile
+
+TidyFishFraud <- select(FishFraud, -Fraud.map.category, -Notes, -repeat., -Species.Geographic.Range, -Amount.of.processing, -Website, -Reference, -In.fraud.map., -In.endnote., -Fraud.Map.ID., -Potentially.Farmed., -farmed.n, -X, -X.1, -X.2, -X.3, -X.4, -X.5, -X.6, -X.7, -X.8)
+
+TidyFishFraud <- filter(
+  TidyFishFraud, 
+  !is.na(Study.number)
+)
+
+glimpse(TidyFishFraud)
 
 
 ```
